# ProbOs

./: .gitignore  README.md  RunProbOS.ps1  check_ci.sh  check_system_requirements.sh  pre_week_audit.sh  pyproject.toml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/bindings/: probos_bindings.cpp
cpp/include/distributions/: lognormal.hpp  uniform.hpp
cpp/include/kernel/: battery_priors.hpp  monte_carlo_omp.hpp
cpp/src/distributions/: lognormal.cpp  uniform.cpp
cpp/src/kernel/: monte_carlo_omp.cpp
cpp/tests/: test_battery_cell.cpp  test_lognormal.cpp  test_monte_carlo_omp.cpp  test_uniform.cpp
docs/: architecture.md  automotive_ev_outreach_email.md  automotive_ev_positioning.md  demo_data.json  enterprise_pilot_email.md  index.html  sbir_phase1_onepager.md
docs/audits/: README.md  month3_week13_2026-07-08.txt
docs/monthly_plans/month1/: main.tex
docs/monthly_plans/month1/week1/: main.tex
docs/monthly_plans/month1/week2/: main.tex
docs/monthly_plans/month1/week3/: main.tex
docs/monthly_plans/month1/week4/: main.tex
docs/monthly_plans/month10/: main.tex
docs/monthly_plans/month11/: main.tex
docs/monthly_plans/month12/: main.tex
docs/monthly_plans/month2/: main.tex
docs/monthly_plans/month2/week5/: main.tex
docs/monthly_plans/month2/week6/: main.tex
docs/monthly_plans/month2/week7/: main.tex
docs/monthly_plans/month2/week8/: main.tex
docs/monthly_plans/month3/: main.tex
docs/monthly_plans/month3/week10/: main.tex
docs/monthly_plans/month3/week11/: main.tex
docs/monthly_plans/month3/week12/: main.tex
docs/monthly_plans/month3/week13/: main.tex
docs/monthly_plans/month3/week14/: main.tex
docs/monthly_plans/month3/week9/: main.tex
docs/monthly_plans/month4/: main.tex
docs/monthly_plans/month5/: main.tex
docs/monthly_plans/month6/: main.tex
docs/monthly_plans/month7/: main.tex
docs/monthly_plans/month8/: main.tex
docs/monthly_plans/month9/: main.tex
docs/monthly_plans/overall/: main.tex
docs/retrospectives/: month1_retrospective.md  month2_plan.md
docs/standards/: quality_standards.md
docs/study/: study_guide.md
docs/vision/: main.tex
manuscript/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  references.bib
python/examples/: week14_injection_molding.pdsl  week14_spec_check_control_flow.pdsl  week1_normal_demo.py  week2_battery_ode.py  week2_clt_demo.py  week3_clt_convergence.py  week3_mc_battery.py  week3_sobol_battery.py  week4_clinical_trial.py  week4_clt_convergence_dp.py  week4_dp_benchmark.py  week4_ed_queue.py  week4_option_pricer.py  week8_clinical_trial_filter.py  week8_ed_queue_filter.py
python/pdsl/: ast_nodes.py  codegen.py  compiler.py  grammar.lark  parser.py
python/server/: main.py  schemas.py
python/src/: battery_model.py  gpu_monte_carlo.py  injection_molding_model.py  monte_carlo.py  parameter_priors.py  particle_filter.py  pharma_stability_model.py  sensitivity.py  state.py
python/tests/: test_battery_model.py  test_cpp_bindings.py  test_distributions.py  test_distributions_properties.py  test_gpu_monte_carlo.py  test_injection_molding_model.py  test_monte_carlo.py  test_particle_filter.py  test_pdsl.py  test_pdsl_v02_control_flow.py  test_pharma_stability_model.py  test_provenance.py  test_sensitivity.py  test_server.py  test_state.py  test_week1_examples.py  test_week4_examples.py  test_week8_examples.py
scripts/: RunAll.sh
